// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildHintRequest > builds hints before anything has been said 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "THE CONVERSATION
Nothing has been said yet.",
        },
      ],
      "role": "user",
    },
  ],
  "generationConfig": {
    "responseMimeType": "application/json",
    "responseSchema": {
      "properties": {
        "hints": {
          "items": {
            "properties": {
              "text": {
                "description": "A full sentence the learner could say next, in the Target Language.",
                "type": "STRING",
              },
              "translation": {
                "description": "The sentence, translated into the Native Language.",
                "type": "STRING",
              },
            },
            "required": [
              "text",
              "translation",
            ],
            "type": "OBJECT",
          },
          "maxItems": 3,
          "minItems": 2,
          "type": "ARRAY",
        },
      },
      "required": [
        "hints",
      ],
      "type": "OBJECT",
    },
  },
  "systemInstruction": {
    "parts": [
      {
        "text": "WHO YOU ARE
You help a learner who speaks Mandarin Chinese and is learning German by living in a small town in Germany. Their level is about CEFR B2.
They are a customer at Café Stern, talking to the barista, and they have asked for help with what to say next.

THE SITUATION
The barista's goal: Take the customer's drink order.
What the barista knows:
- Café Stern is open 07:00–19:00.
- On the menu: Latte macchiato, €4.50 (menu id "latte").
- On the menu: Filterkaffee, €3.75 (menu id "coffee").
- On the menu: Schwarztee, €3 (menu id "tea").
- Card and cash are both fine.
- The toilet is at the back.
- There is free Wi-Fi.

WHAT TO WRITE
- hints: 2 or 3 different things the learner could say next, each a full sentence in German that moves the conversation on from where it is now. Write them as the learner, the customer, would say them: never the staff member's lines.
- Keep each sentence natural, polite and short enough to say aloud at their level. Use only what the situation offers.
- translation: each sentence in natural Mandarin Chinese.
Write the sentences only in German, and the translations only in Mandarin Chinese.",
      },
    ],
  },
}
`;

exports[`buildHintRequest > builds hints for the moment in a conversation 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "THE CONVERSATION
The conversation so far:
1. NPC: いらっしゃいませ！ご注文はお決まりですか？
2. PLAYER (typed): ラテ
3. NPC: ホットラテですね。450円です。よろしいですか？",
        },
      ],
      "role": "user",
    },
  ],
  "generationConfig": {
    "responseMimeType": "application/json",
    "responseSchema": {
      "properties": {
        "hints": {
          "items": {
            "properties": {
              "text": {
                "description": "A full sentence the learner could say next, in the Target Language.",
                "type": "STRING",
              },
              "translation": {
                "description": "The sentence, translated into the Native Language.",
                "type": "STRING",
              },
            },
            "required": [
              "text",
              "translation",
            ],
            "type": "OBJECT",
          },
          "maxItems": 3,
          "minItems": 2,
          "type": "ARRAY",
        },
      },
      "required": [
        "hints",
      ],
      "type": "OBJECT",
    },
  },
  "systemInstruction": {
    "parts": [
      {
        "text": "WHO YOU ARE
You help a learner who speaks British English and is learning Japanese by living in a small town in Japan. Their level is about CEFR A1.
They are a customer at ほしコーヒー, talking to the barista, and they have asked for help with what to say next.

THE SITUATION
The barista's goal: Take the customer's drink order.
What the barista knows:
- ほしコーヒー is open 07:00–19:00.
- On the menu: ホットラテ, ¥450 (menu id "latte").
- On the menu: コーヒー, ¥375 (menu id "coffee").
- On the menu: 紅茶, ¥300 (menu id "tea").
- Cash, card and IC cards are all fine.
- The toilet is at the back.
- There is free Wi-Fi.

WHAT TO WRITE
- hints: 2 or 3 different things the learner could say next, each a full sentence in Japanese that moves the conversation on from where it is now. Write them as the learner, the customer, would say them: never the staff member's lines.
- Keep each sentence natural, polite and short enough to say aloud at their level. Use only what the situation offers.
- translation: each sentence in natural British English.
Write the sentences only in Japanese, and the translations only in British English.",
      },
    ],
  },
}
`;
